Feat: Add docker settings

--- a/mediscreen-patient/src/main/resources/application.properties
+++ b/mediscreen-patient/src/main/resources/application.properties
@@ -1,11 +1,22 @@
-### H2 Settings
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.defer-datasource-initialization= true
+### H2 Settings ###
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.defer-datasource-initialization= true
+#
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+### server port ###
+server.port=8081
+
+### mySQL settings ###
+spring.datasource.url=jdbc:mysql://mysql:3306/mediscreen
+spring.datasource.username=mds
+spring.datasource.password=ocp9
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
