Chore(frontend): Add docker settings

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,3 +26,11 @@ services:
     depends_on:
       - mysql
     restart: always
+  
+  mediscreen-front:
+    build:
+      context: ./mediscreen-front
+    ports:
+      - "8080:3000"
+    restart: always
+    stdin_open: true
