--- a/mediscreen-history/src/main/resources/application.properties
+++ b/mediscreen-history/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8082
 
 ### mongoDB setting ###
-spring.data.mongodb.uri=mongodb://localhost:27017/mediscreen
+spring.data.mongodb.uri=mongodb://mongodb:27017/mediscreen
 spring.data.mongodb.username=mds
 spring.data.mongodb.password=ocp9
