--- a/mediscreen-front/package.json
+++ b/mediscreen-front/package.json
@@ -12,8 +12,10 @@
     "@types/react-dom": "^18.0.5",
     "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.8.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
